--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "jotai": "^2.14.0",
     "lucide-react": "^0.541.0",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.18.2",
     "next": "15.5.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
@@ -18,6 +21,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.12",
+    "@types/mongodb": "^4.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
