--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.2",
     "next": "15.5.0",
+    "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0"
