--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "jotai": "^2.14.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.541.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.2",
@@ -17,7 +18,8 @@
     "next-cloudinary": "^6.16.0",
     "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
