--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.12",
+    "@types/leaflet": "^1.9.21",
     "@types/mongodb": "^4.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
